removed unused name

--- a/action.yml
+++ b/action.yml
@@ -41,9 +41,9 @@ runs:
     - name: Upload Static Site Artifacts
       uses: actions/upload-pages-artifact@v0
       with:
-        name: github-pages
         path: ./${{ inputs.docC-generated-static-site-uploaded-name }}/__site
         retention-days: 1
+        if-no-files-found: error
 
     - name: Deploy To Pages
       id: deploy-step
